<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_attack">Attack</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">MyMessage</string>
    <string name="character_name_label">Character Name:</string>
    <string name="character_class_label">Character Class:</string>
    <string name="character_level_label">Character Level:</string>
    <string name="experience_label">Experience:</string>
    <string name="number_delimiter">/</string>
    <string name="interval_delimiter">-</string>
    <string name="damage_label">Damage:</string>
    <string name="armor_label">Armor:</string>
    <string name="health_label">Health:</string>
    <string name="mana_label">Mana:</string>
    <string name="chance_to_hit_label">Chance to hit:</string>
    <string name="strength_label">STR:</string>
    <string name="dexterity_label">DEX:</string>
    <string name="vitality_label">VIT:</string>
    <string name="magic_label">MAG:</string>
    <string name="button_start_battle">Start Battle</string>
    <string name="enter_character_name">Please enter your character name</string>

    <string-array name="character_class_array">
        <item>Warrior</item>
        <item>Rogue</item>
        <item>Mage</item>
    </string-array>

    <string name="title_activity_character_screen">CharacterScreenActivity</string>
    <string name="title_activity_battle_screen">BattleScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="button_done">Done</string>

    <!-- Action Bar Strings -->
    <string name="button_fireball">Fireball</string>
    <string name="button_immolation">Immolation</string>
    <string name="button_frostbolt">Frostbolt</string>
    <string name="button_heal">Heal</string>
    <string name="button_cripple">Cripple</string>
    <string name="button_meteor_shower">Meteor Shower</string>
    <string name="button_health_potion">Health Potion</string>
    <string name="button_mana_potion">Mana Potion</string>
    <string name="title_activity_location_screen">LocationScreenActivity</string>

    <!-- Location Activity Strings -->
    <string name="button_explore_location">Explore</string>
    <string name="button_gather">Gather</string>
    <string name="button_inventory">Inventory</string>
    <string name="title_activity_inventory_screen">InventoryScreenActivity</string>
    
    <!-- Inventory Activity Strings -->
    <string name="button_equip_item">Equip</string>
    <string name="button_unequip_item">Unequip</string>

</resources>
