<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CharacterScreenActivity" >

    <TextView
        android:id="@+id/characterNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_name_label" />
    <TextView
        android:id="@+id/character_name_value"
        android:layout_toRightOf="@id/characterNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/characterClassLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/characterNameLabel"
        android:text="@string/character_class_label" />
    <TextView
        android:id="@+id/characterClassValue"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/characterClassLabel"
        android:layout_below="@id/character_name_value"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/character_level_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/characterClassLabel"
        android:text="@string/character_level_label" />
    <TextView
        android:id="@+id/character_level_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/character_level_label"
        android:layout_below="@id/characterClassLabel"
        android:layout_height="wrap_content"/>
	<TextView
        android:id="@+id/experience_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_level_label"
        android:text="@string/experience_label" />
    <TextView
        android:id="@+id/experience_gained_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/experience_label"
        android:layout_below="@id/character_level_label"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/number_delimiter"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/experience_gained_value"
        android:layout_below="@id/character_level_label"
        android:layout_height="wrap_content"
    	android:text="@string/number_delimiter" />
    <TextView
        android:id="@+id/experience_needed_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/number_delimiter"
        android:layout_below="@id/character_level_label"
        android:layout_height="wrap_content"/>
    <!-- Strength -->
    <TextView
        android:id="@+id/strength_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/experience_label"
        android:layout_height="wrap_content"
    	android:text="@string/strength_label" />
    <TextView
        android:id="@+id/strength_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/strength_label"
        android:layout_below="@id/experience_label"
        android:layout_height="wrap_content"/>
    <!-- Dexterity -->
    <TextView
        android:id="@+id/dexterity_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/strength_label"
        android:layout_height="wrap_content"
    	android:text="@string/dexterity_label" />
    <TextView
        android:id="@+id/dexterity_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/dexterity_label"
        android:layout_below="@id/strength_label"
        android:layout_height="wrap_content"/>
    <!-- Vitality -->
    <TextView
        android:id="@+id/vitality_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/dexterity_label"
        android:layout_height="wrap_content"
    	android:text="@string/vitality_label" />
    <TextView
        android:id="@+id/vitality_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/vitality_label"
        android:layout_below="@id/dexterity_label"
        android:layout_height="wrap_content"/>
    <!-- Magic -->
    <TextView
        android:id="@+id/magic_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/vitality_label"
        android:layout_height="wrap_content"
    	android:text="@string/magic_label" />
    <TextView
        android:id="@+id/magic_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/magic_label"
        android:layout_below="@id/vitality_label"
        android:layout_height="wrap_content"/>
     <!-- Damage -->
    <TextView
        android:id="@+id/damage_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/magic_label"
        android:layout_height="wrap_content"
    	android:text="@string/damage_label" />
    <TextView
        android:id="@+id/min_damage_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/damage_label"
        android:layout_below="@id/magic_label"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/damage_delimiter_label"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/min_damage_value"
        android:layout_below="@id/magic_label"
        android:text="@string/interval_delimiter"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/max_damage_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/damage_delimiter_label"
        android:layout_below="@id/magic_label"
        android:layout_height="wrap_content"/>
     <!-- Armor -->
    <TextView
        android:id="@+id/armor_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/damage_label"
        android:layout_height="wrap_content"
    	android:text="@string/armor_label" />
    <TextView
        android:id="@+id/armor_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/armor_label"
        android:layout_below="@id/damage_label"
        android:layout_height="wrap_content"/>
    <!-- Health -->
    <TextView
        android:id="@+id/health_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/armor_label"
        android:layout_height="wrap_content"
    	android:text="@string/health_label" />
    <TextView
        android:id="@+id/health_current_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/health_label"
        android:layout_below="@id/armor_label"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/health_delimiter_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/armor_label"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/health_current_value"
    	android:text="@string/number_delimiter" />
    <TextView
        android:id="@+id/health_total_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/health_delimiter_label"
        android:layout_below="@id/armor_label"
        android:layout_height="wrap_content"/>
    <!-- Mana -->
    <TextView
        android:id="@+id/mana_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/health_label"
        android:layout_height="wrap_content"
    	android:text="@string/mana_label" />
    <TextView
        android:id="@+id/mana_current_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/mana_label"
        android:layout_below="@id/health_label"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/mana_delimiter_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/health_label"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/mana_current_value"
    	android:text="@string/number_delimiter" />
    <TextView
        android:id="@+id/mana_total_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/mana_delimiter_label"
        android:layout_below="@id/health_label"
        android:layout_height="wrap_content"/>
     <!-- Chance to hit -->
    <TextView
        android:id="@+id/chance_to_hit_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/mana_label"
        android:layout_height="wrap_content"
    	android:text="@string/chance_to_hit_label" />
    <TextView
        android:id="@+id/chance_to_hit_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/chance_to_hit_label"
        android:layout_below="@id/mana_label"
        android:layout_height="wrap_content"/>
    <!-- Start battle button -->
    <Button
        android:id="@+id/button_start_battle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chance_to_hit_value"
        android:text="@string/button_start_battle" 
        android:onClick="startBattle"/>
    
</RelativeLayout>
