<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:background="@drawable/back" >
    
    <!-- Character info -->
    <TextView
        android:id="@+id/battle_status_view_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_name_label" />
    <TextView
        android:id="@+id/battle_status_view_name_value"
        android:layout_toRightOf="@id/battle_status_view_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
	<!-- Health -->
    <TextView
        android:id="@+id/battle_status_view_health_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/battle_status_view_name_label"
        android:layout_height="wrap_content"
    	android:text="@string/health_label" />
    <TextView
        android:id="@+id/battle_status_view_health_current_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/battle_status_view_health_label"
        android:layout_below="@id/battle_status_view_name_label"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/battle_status_view_health_delimiter_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/battle_status_view_name_label"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/battle_status_view_health_current_value"
    	android:text="@string/number_delimiter" />
    <TextView
        android:id="@+id/battle_status_view_health_total_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/battle_status_view_health_delimiter_label"
        android:layout_below="@id/battle_status_view_name_label"
        android:layout_height="wrap_content"/>
    <!-- Mana -->
    <TextView
        android:id="@+id/battle_status_view_mana_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/battle_status_view_health_label"
        android:layout_height="wrap_content"
    	android:text="@string/mana_label" />
    <TextView
        android:id="@+id/battle_status_view_mana_current_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/battle_status_view_mana_label"
        android:layout_below="@id/battle_status_view_health_label"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/battle_status_view_mana_delimiter_label"
        android:layout_width="wrap_content"
        android:layout_below="@id/battle_status_view_health_label"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/battle_status_view_mana_current_value"
    	android:text="@string/number_delimiter" />
    <TextView
        android:id="@+id/battle_status_view_mana_total_value"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/battle_status_view_mana_delimiter_label"
        android:layout_below="@id/battle_status_view_health_label"
        android:layout_height="wrap_content"/>
    
</RelativeLayout>
