<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LocationScreenActivity" >

    <TextView
        android:id="@+id/location_name_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/button_explore_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_name_label"
        android:text="@string/button_explore_location"
        android:onClick="exploreLocation"/>
    
    <Button
        android:id="@+id/button_gather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_explore_location"
        android:text="@string/button_gather"
        android:onClick="gather"/>
    
    <Button
        android:id="@+id/button_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_gather"
        android:text="@string/button_inventory"
        android:onClick="openInventory"/>

    <!-- Location Services -->
    <ListView 
        android:id="@+id/location_service_list"
        android:layout_width="wrap_content"
    	android:layout_height="250dp"
    	android:layout_alignParentRight="true"
    	android:layout_toRightOf="@id/button_explore_location"
    	android:layout_below="@id/location_name_label"
    	android:stackFromBottom="false" />
    
    <!-- Other Location Connections -->
    <my.first.game.views.OtherLocationConnectionView 
        android:id="@+id/other_location_connection_view"
        android:layout_width="wrap_content"
    	android:layout_height="250dp"
    	android:layout_alignParentBottom="true"
    	android:layout_below="@id/location_service_list" />    
</RelativeLayout>
